--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,31 @@
-*{
-  margin: 0;
-  color: white;
+.font-playwrite {
+  font-family: "Playwrite HU", cursive;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.font-plex-sans-normal{
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.font-plex-sans-normal{
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+:root{
+  --light1: #e0fbfc; 
+  --light2: #66FCF1;
+  --light3: #45A29E;
+  --light4: rgb(215, 230, 253);
+  --dark1: #1F2833; 
+  --dark2: #0B0C10; 
+  --test2: #12122b;
+  --test1: #293241;
 }
 
 header{
@@ -8,29 +33,42 @@ header{
   min-height: 3rem;
   display: flex;
   justify-content: end;
-  gap: 5rem;
-  background-color: rgb(18, 22, 70);
-  border-bottom: 1px solid white;
-
+  align-items: center;
+  gap: 4rem;
+  
+  color: var(--light2);
+  /* background-image: url('./assets/background.png'); */
+  background: linear-gradient(-145deg, var(--dark2), var(--dark1));
+  border-bottom: 2px solid var(--light3);
+  z-index: 10;
 }
 
-main {
-  background-color: rgb(18, 22, 70);
+html{
+  margin: 0;
+  color: var(--light2);
+  background-image: url('./assets/background1BW.png');
+  background-size: cover;
+  /* background-color: var(--dark1); */
+  /* background-blend-mode:; */
 }
 
 .main-center{
   margin: 0 auto;
-  padding: 6rem 2rem;
-  width: 90%;
-  min-height: 100vh;
+  padding: 6rem ;
+  width: 85%;
+  min-height: 100%;
+  background: linear-gradient(145deg, #1F2833dd, var(--dark2) 100%);
+  box-shadow: 0px 5px 10px 5px var(--dark2);
 }
 
 .profile{
   width: 45rem;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0 auto 2rem auto;
+  padding-left: 1rem;
   display: flex;
-  border: 1px solid red;
+  
+  border-radius: .5rem;
+  background-color: var(--dark1);
 }
 
 .profile div{
@@ -44,23 +82,69 @@ main {
 
 
 .game-project-cont, .web-project-cont{
-  padding: 2rem;
-  border: 1px solid grey;
+  margin: 1rem 0rem;
+  padding: .5rem 2rem;
+  background-color: var(--dark2);
+  border-radius: .5rem;
+
+  position: relative;
+  cursor: pointer;
+}
+
+.project-cont{
+  margin: 1rem 0;
+  padding: 1rem 0;
 }
 
 .project-card{
   width: 100%;
-  padding: 1rem;
-  margin: 1rem 0;
+  padding: 0rem 1.5rem;
+  margin: .75rem 0;
   display: flex;
   justify-content: space-between;
-  border: 1px solid green;
+  align-items: center;
 
+  background-color: var(--dark1);
+  color: var(--light2);
+  border-radius: 1rem;
   cursor:pointer;
+}
+
+.project-card h3{
+  color: var(--light4);
 }
 
 .project-link-cont{
   min-width: 6rem;
   display: flex;
   justify-content: space-between;
+}
+
+.contact-me-btn {
+  padding: 1rem;
+  font-size: 1rem;
+  color: var(--light1);
+  background-color: rgb(200, 36, 4);
+  border: none;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  border-top-right-radius: 1rem;
+
+  cursor: pointer;
+}
+
+.nav-link:hover{
+  text-decoration: underline;
+}
+
+.project-header-div{
+  width:11rem;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.project-items-cont{
+  margin-bottom: 2rem;
+  border-bottom: 2px solid var(--light2);
 }
