--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ html{
   margin: 0;
   color: var(--light2);
   background-image: url('./assets/background1BW.png');
-  background-size: cover;
+  background-size: 100rem;
   /* background-color: var(--dark1); */
   /* background-blend-mode:; */
 }
@@ -100,6 +100,8 @@ html{
   cursor: pointer;
 
   font-family: "IBM Plex Sans", sans-serif;
+  overflow: hidden;
+  transition: .75s;
 }
 
 .project-cont{
@@ -132,16 +134,52 @@ html{
 }
 
 .contact-me-btn {
+  margin-bottom: 1rem;
   padding: 1rem;
   font-size: 1rem;
   color: var(--light1);
-  background-color: rgb(200, 36, 4);
+  background-color: rgb(12, 75, 185);
   border: none;
-  border-bottom-left-radius: 1rem;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: .5rem;
+  border-bottom-left-radius: .5rem;
   border-bottom-right-radius: 1rem;
-  border-top-right-radius: 1rem;
-
+  
+  box-shadow: 1px 1px 10px 1px rgb(0, 0, 0);
   cursor: pointer;
+}
+
+.contact-me-btn:hover{
+  background-color: rgb(0, 89, 244);
+}
+
+.contact-me-btn:active{
+  background-color: rgb(12, 75, 185);
+}
+
+.contact-me-cont{
+  height: 0;
+  border-top:2px solid var(--light2);
+  border-bottom:2px solid var(--light2);
+  border-radius: 1rem;
+  background-color: var(--dark2);
+  overflow: hidden;
+  transition: .25s ease-in-out;
+}
+
+.contact-me-cont-show{
+  /* padding: 1rem; */
+  height: 8.2rem;
+}
+
+.contact-me-cont-hide{
+  /* padding: 0; */
+  height: 0;
+}
+
+.contact-me-cont-inner{
+  padding: 1rem;
+  height: 100%;
 }
 
 .nav-link::after{
@@ -173,6 +211,7 @@ html{
 }
 
 footer{
-  background-color: var(--dark2);
   min-height: 5rem;
+  border-top: 3px solid var(--light3);
+  background-color: var(--dark2);
 }
